Import of ADAMK/Aspect-Library-Profiler-0.32 from CPAN.
gitpan-cpan-distribution: Aspect-Library-Profiler
gitpan-cpan-version:      0.32
gitpan-cpan-path:         ADAMK/Aspect-Library-Profiler-0.32.tar.gz
gitpan-cpan-author:       ADAMK
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -74,7 +74,7 @@ AUTHORS
 COPYRIGHT AND LICENSE
     Copyright 2001 by Marcel Grünauer.
 
-    Some parts copyright 2009 Adam Kennedy.
+    Some parts copyright 2009 - 2010 Adam Kennedy.
 
     This library is free software; you can redistribute it and/or modify it
     under the same terms as Perl itself.
